--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         Registration Number not found!
     </h2>
     <div class="deets">
-        <h1 class="flow-text" style="color: #26a69a;">Details</h1>
+        <h4 class="" style="color: #26a69a;">Details</h4>
         <div class="info">
             <div class="info1">
                 <h2 class="flow-text name">Name:</h1>
