Regno phone bug

--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
 <body>
     <div class="input">
         <div class="input-field col s12">
-            <input id="RegNo" type="text" class="">
-            <label for="text">Reg No</label>
+            <input id="RegNo" type="text" class="" placeholder="Your Registration Number">
         </div>
         <button class="btn waves-effect waves-light check" type="submit" name="action">Submit</button>
     </div>
