Title and addressbar color

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DSC | 2CC Attendance</title>
     <link rel="manifest" href="./assets/manifest.webmanifest">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <meta name="theme-color" content="#26a69a"/>
     <style>
         body {
             position: relative;
