addressbar color change

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>DSC | 2CC Attendance</title>
     <link rel="manifest" href="./assets/manifest.webmanifest">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <meta name="theme-color" content="#26a69a"/>
+    <meta name="theme-color" content="#18e0cc"/>
     <style>
         body {
             position: relative;
             height: fit-content;
             min-height: 100vh;
-
+            color: #18e0cc;
         }
 
         .input {
