--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 <body>
     <div class="logo">
-        <img src="./assets/dsc-logo.svg" alt="">
+        <img src="./assets/dsc-logo.svg" alt="" class="_logo">
     </div>
     <h4 style="color: #26a69a; text-align: center;" class="heading">DSC 2CC Attendance</h4>
     <div class="input">
@@ -156,7 +156,7 @@
     </div>
     <script src="./assets/data.js"></script>
     <script>
-        if(window.innerWidth < 900) document.querySelector(".heading").style.height = window.innerHeight*0.022;
+        if(window.innerWidth < 900) document.querySelector("._logo").style.height = window.innerHeight*0.022;
         let rows = document.querySelectorAll(".data");
         const CheckBtn = document.querySelector(".check");
         const message = document.querySelector(".message");
