--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </div>
     <script src="./assets/data.js"></script>
     <script>
-        if(window.innerWidth < 900) document.querySelector("._logo").style.height = window.innerHeight*0.022;
+        if(window.innerWidth < 900) document.querySelector("._logo").style.height = window.innerHeight*0.022 + "px";
         let rows = document.querySelectorAll(".data");
         const CheckBtn = document.querySelector(".check");
         const message = document.querySelector(".message");
